ratings are operational now and you can get movies by cast members
